# lager

./: .gitignore  README.md  a.py  b.py  c.py  d.py  lager.bat  lager.ps1  lager.wsb  loder.py  log.txt  main.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
logs/: scoop_log.txt
src/: lager.py  logs.py  ut.py
