[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lager"
description = " for cognosis, namespace and filesystem interface; obsidian kb"
authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.11"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pdm.conda]
runner = "micromamba"
channels = ["conda-forge/noarch", "conda-forge", "anaconda"]
dependencies = ["pdm", "jax", "jupyter", "ipykernel", "numpy", "httpx"]
as-default-manager = true
solver = "libmamba"
excludes = ["pytest-cov"] # don't install with conda even if it's a dependency from other packages
installation-method = "copy"
batched-commands = true

[tool.pdm.conda.pypi-mapping]
download-dir = "/tmp"
url = "https://url/to/mapping.yaml"

[tool.pdm.conda.optional-dependencies]
extra = ["anaconda:ffmpeg"] # non-python dependency, obtained from anaconda channel

[tool.pdm.conda.dev-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
main = "main.py:main"